# dangen

./: .gitignore  INSTALL  LICENSE  Makefile.am  Makefile.in  README  README-ja-sjis  README-ja-utf8  background.c  background.h  chain.c  chain.h  config.h.in  configure  configure.ac  const.h  dangen.6  esc-ok.h  info.c  info.h  loop.c  loop.h  main.c  option.c  option.h  pause.c  pause.h  score.c  score.h  ship.c  ship.h  slow.c  slow.h  stage.c  stage.h  util.c  util.h
libtenm/: Makefile.am  Makefile.in  tenm_graphic.c  tenm_graphic.h  tenm_input.c  tenm_table.c
record/: Makefile.am  Makefile.in  record_data.c  record_data.h  record_io.c  record_io.h  record_lexical.c  record_lexical.h  record_lexical.l  record_parser.c  record_parser.h  record_parser.y  record_parser_private.h  record_parser_public.h  record_util.c  record_util.h
spqr/: Makefile.am  Makefile.in  afterdeath.c  afterdeath.h  brilliance.c  brilliance.h  cat-tail-grep.c  cat-tail-grep.h  cat-tail.c  cat-tail.h  empty-wind.c  empty-wind.h  explosion.c  explosion.h  flatdice.c  flatdice.h  fragment.c  fragment.h  gosanpachi.c  gosanpachi.h  hatsuda.c  hatsuda.h  hugin.c  hugin.h  insane-hand.c  insane-hand.h  laser.c  laser.h  last-boss.c  last-boss.h  mankanshoku.c  mankanshoku.h  negation-engine.c  negation-engine.h  net-can-howl.c  net-can-howl.h  nexus.c  nexus.h  normal-enemy.c  normal-enemy.h  (+104 more)
spqr/image/: Makefile.am  Makefile.in
